fix Navbar Align

--- a/frontend/tech-haven/src/components/Navbar/Navbar.css
+++ b/frontend/tech-haven/src/components/Navbar/Navbar.css
@@ -22,7 +22,7 @@
 
 .navbar__navigation {
   display: flex;
-  align-items: center;
+  align-items: flex-end;
 }
 
 .navbar__link {
